--- a/Phase3.ipynb
+++ b/Phase3.ipynb
@@ -28,16 +28,26 @@
         "\n",
         "- **Clustering and Classification**: For clustering tasks, experimenting with various clustering algorithms like K-Means, DBSCAN, and hierarchical clustering, and for classification or regression tasks, building models to predict outcomes.\n",
         "\n",
-        "Each step is carefully documented, including the rationale behind model selection, the evaluation metrics used, and any challenges encountered. This process will ultimately guide further analysis, model selection, and optimization. The insights and models developed will be crucial for answering the project’s key questions and advancing the data science workflow.\n"
+        "Each step is carefully documented, including the rationale behind model selection, the evaluation metrics used, and any challenges encountered. This process will ultimately guide further analysis, model selection, and optimization. The insights and models developed will be crucial for answering the project’s key questions and advancing the data science workflow.\n",
+        "\n",
+        "> **Note**: We are proceeding to model each research question individually. This ensures that the modeling strategy is tailored specifically to the context and requirements of each question, leading to more targeted and interpretable outcomes.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### Table of Contents\n",
+        "\n",
+        "1. [What factors influence the intensity of natural disasters?](#1-what-factors-influence-the-intensity-of-natural-disasters)  \n",
+        "2. [Which regions are most commonly affected by specific types of natural disasters?](#2-which-regions-are-most-commonly-affected-by-specific-types-of-natural-disasters)  \n",
+        "3. [What are the estimated losses associated with natural disasters based on current data?](#3-what-are-the-estimated-losses-associated-with-natural-disasters-based-on-current-data)  \n",
+        "4. [Which regions have a greater chance in expecting earthquakes?](#4-which-regions-have-a-greater-chance-in-expecting-earthquakes)  \n",
+        "5. [Conclusion](#conclusion)\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "FeVT_zlxWkB6"
-      },
+      "metadata": {},
       "source": [
-        "first question\n"
+        "### 1. What factors influence the intensity of natural disasters?\n"
       ]
     },
     {
@@ -588,7 +598,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#2. Disaster Types and Regions"
+        "### 2. Which regions are most commonly affected by specific types of natural disasters?\n"
       ]
     },
     {
@@ -760,7 +770,7 @@
         "id": "lVZL8Axmbby2"
       },
       "source": [
-        "## 3. Losses Associated with Disasters"
+        "### 3. What are the estimated losses associated with natural disasters based on current data?\n"
       ]
     },
     {
@@ -1872,13 +1882,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "X0sITV5UXglF"
-      },
-      "source": []
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -2183,8 +2186,7 @@
         "id": "YCXSS0XanOqB"
       },
       "source": [
-        "# 4 Earthquake Risk by Region\n",
-        "In this analysis, we aim to explore which regions have a greater likelihood of experiencing earthquakes.\n"
+        "### 4. Which regions have a greater chance in expecting earthquakes?\n"
       ]
     },
     {
@@ -2901,6 +2903,86 @@
         "\n",
         "# Show the plot\n",
         "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Interpretation\n",
+        "\n",
+        "The plot above shows the **Actual vs. Predicted values** using a **Linear Regression model** for evaluating overall earthquake risk. The blue dots represent the predicted values based on historical earthquake data, including magnitude, while the red dashed line represents a perfect prediction line (`y = x`).\n",
+        "\n",
+        "As observed, the model’s predictions align almost perfectly with the actual values, indicating **excellent model performance** on the available dataset. This suggests that the model is highly effective in capturing the historical relationship between magnitude and estimated risk.\n",
+        "\n",
+        ">  **Note**: This model is not reading real-time data or performing live prediction. It is solely trained on historical data and uses magnitude as a key factor in estimating earthquake-related risk.  \n",
+        ">  \n",
+        ">  As stated in the *Future Work* section, a key next step is to incorporate real-time data for predictive modeling and early warning capabilities.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Conclusion\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "\n",
+        "In this project, we addressed several key research questions regarding natural disasters using data science techniques, focusing on earthquake prediction and regional disaster analysis.\n",
+        "\n",
+        "### 1. What factors influence the intensity of natural disasters?\n",
+        "\n",
+        "Through the analysis of earthquake data, we explored how **Magnitude** and other features such as **Development Level** and **Region** influence the intensity of natural disasters. The models showed that **Magnitude** is the strongest predictor for both **Total Affected** and **Total Damages**, though its predictive power is limited, especially for damages. Incorporating **Development Level** and **Region** provided some improvement in prediction accuracy, particularly for **Total Affected**, but the models' overall performance still left room for improvement.\n",
+        "\n",
+        "- **Key Insights**:\n",
+        "  - **Magnitude** strongly influences the severity of the impact of an earthquake.\n",
+        "  - **Development Level** of a region (e.g., high, medium, low) and its **Region** (geographical classification) also play important roles in how disasters impact populations.\n",
+        "  - **Random Forest** and **Gradient Boosting** outperformed **Linear Regression** in terms of prediction accuracy, especially when additional features were included.\n",
+        "\n",
+        "### 2. Which regions are most commonly affected by specific types of natural disasters?\n",
+        "\n",
+        "By analyzing disaster data based on regions (using ISO codes), we were able to identify which regions are most affected by different types of natural disasters. The results revealed that **Asia** and **Africa** are most frequently impacted by **earthquakes**, **storms**, and **floods**.\n",
+        "\n",
+        "- **Key Insights**:\n",
+        "  - **Asia** is particularly vulnerable to **earthquakes** and **storms**, with the highest number of events.\n",
+        "  - **Africa** is also frequently affected, particularly by **droughts** and **epidemics**.\n",
+        "\n",
+        "### 3. What are the estimated losses associated with natural disasters based on current data?\n",
+        "\n",
+        "We visualized and analyzed the **total damages** caused by natural disasters over time. This analysis showed a sharp increase in damages around the year 2000, followed by fluctuating trends in subsequent years. By using **time series forecasting** models like Prophet, we prepared the data for future forecasting, which could provide insights into potential future damages.\n",
+        "\n",
+        "- **Key Insights**:\n",
+        "  - The **total damages** from natural disasters have significantly increased since 2000, with occasional spikes in certain years.\n",
+        "  - Forecasting future damages can help predict trends and inform disaster preparedness strategies.\n",
+        "\n",
+        "### 4. Which regions have a greater chance of expecting earthquakes?\n",
+        "\n",
+        "For this research question, we focused on predicting **earthquake risk** in high-risk regions, such as **Japan** and **Indonesia**. The **Random Forest** and **Linear Regression** models predicted the likelihood of earthquakes based on **magnitude** and **region**. The analysis showed that regions with higher **magnitude** values (greater than 5) had a higher risk of experiencing significant earthquakes.\n",
+        "\n",
+        "- **Key Insights**:\n",
+        "  - **Japan** and **Indonesia** are high-risk regions for earthquakes, primarily due to their geographical locations along tectonic plate boundaries.\n",
+        "  - **Random Forest** showed strong performance in predicting earthquake risk based on these features.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Future Work\n",
+        "\n",
+        "- **Real-Time Data Prediction**:  \n",
+        "  One of the major goals for future work is to read data in real-time to predict earthquakes based on magnitude and historical data. This would allow us to provide timely predictions and responses to natural disasters, enhancing preparedness and response strategies.\n",
+        "\n",
+        "- **Improving Model Accuracy**:  \n",
+        "  Improving accuracy is another key focus, particularly by working on datasets tailored to specific disasters (e.g., earthquakes, storms, floods). By segmenting the data based on disaster type, we can develop more specialized models that capture the unique patterns and characteristics of each disaster type.\n",
+        "\n",
+        "- **Collaboration and Integration**:  \n",
+        "  Future efforts may involve collaborating with government agencies, geoscience institutes, or humanitarian organizations to integrate predictive models into real-world early warning systems. This could help bridge the gap between data science insights and operational disaster response.\n"
       ]
     }
   ],
